# table_formatter

./: pyproject.toml
table_formatter/: links.txt  table.py
tests/: test_table_formatter.py
